[gd_scene load_steps=3 format=3 uid="uid://bkknomxku1jcv"]

[ext_resource type="Script" path="res://src/ui/unit_menu/creep_mini_details.gd" id="1_0rr73"]
[ext_resource type="PackedScene" uid="uid://b5kapr6gujqbt" path="res://src/ui/unit_menu/mini_details_label.tscn" id="2_swo34"]


[node name="CreepMiniDetails" type="TabContainer" node_paths=PackedStringArray("_stats_left_label", "_stats_right_label", "_dmg_left_label", "_dmg_right_label")]
custom_minimum_size = Vector2(400, 300)
size_flags_vertical = 8
current_tab = 0
tab_focus_mode = 0
script = ExtResource("1_0rr73")
_stats_left_label = NodePath("Stats/StatsLeftLabel")
_stats_right_label = NodePath("Stats/StatsRightLabel")
_dmg_left_label = NodePath("Dmg/DmgLeftLabel")
_dmg_right_label = NodePath("Dmg/DmgRightLabel")

[node name="UpdateTimer" type="Timer" parent="."]

[node name="Stats" type="HBoxContainer" parent="."]
layout_mode = 2
metadata/_tab_index = 0

[node name="StatsLeftLabel" parent="Stats" instance=ExtResource("2_swo34")]
layout_mode = 2

[node name="StatsRightLabel" parent="Stats" instance=ExtResource("2_swo34")]
layout_mode = 2

[node name="Dmg" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="DmgLeftLabel" parent="Dmg" instance=ExtResource("2_swo34")]
layout_mode = 2

[node name="DmgRightLabel" parent="Dmg" instance=ExtResource("2_swo34")]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_update_timer_timeout"]
